--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
                 <a href="contact.html">Contact</a>
             </nav>
             <div class="nav-cta">
-                <button href="contact.html" class="btn-primary">Get Started</button>
+               <button class="btn-primary" onclick="location.href='contact.html'">Get Started</button>
+
             </div>
         </div>
     </header>
