--- a/index.html
+++ b/index.html
@@ -11,25 +11,29 @@
 <body>
     <!-- Header -->
     <header class="header">
-        <div class="container">
-            <div class="nav-brand">
-                <div class="logo">
-                    <i class="fas fa-brain"></i>
-                    <span>MindCare</span>
-                </div>
+    <div class="container">
+        <div class="nav-brand">
+            <div class="logo">
+                <i class="fas fa-brain"></i>
+                <span>MindCare</span>
             </div>
-            <nav class="nav-menu">
-                <a href="index.html">Home</a>
-                <a href="about.html">About</a>
-                <a href="services.html">Services</a>
-                <a href="contact.html">Contact</a>
-            </nav>
-            <div class="nav-cta">
-               <button class="btn-primary" onclick="location.href='contact.html'">Get Started</button>
-
+            <!-- Hamburger icon -->
+            <div class="menu-toggle" onclick="toggleMenu()">
+                <i class="fas fa-bars"></i>
             </div>
         </div>
-    </header>
+        <nav class="nav-menu" id="navMenu">
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="services.html">Services</a>
+            <a href="contact.html">Contact</a>
+        </nav>
+        <div class="nav-cta">
+            <button class="btn-primary" onclick="location.href='contact.html'">Get Started</button>
+        </div>
+    </div>
+</header>
+
 
     <!-- Hero Section -->
     <section class="hero">
@@ -248,6 +252,14 @@
             </div>
         </div>
     </footer>
+
+    <script>
+    function toggleMenu() {
+        const menu = document.getElementById('navMenu');
+        menu.classList.toggle('show');
+    }
+</script>
+
     
 </body>
 </html>
